[package]
name = "songwhip-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
regex = "1.9.1"
reqwest = "0.11.18"
serde = "1.0.175"

[dependencies.tokio]
version = "1.29.1"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11.6"
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]
