[package]
name = "songwhip-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json"] }
serde = "1.0.197"

[dependencies.tokio]
version = "1.36.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.12.1"
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]
